--- a/examples/scim-provider/pyproject.toml
+++ b/examples/scim-provider/pyproject.toml
@@ -1,61 +1,42 @@
+[tool.poetry]
+name = "scim-provider"
+version = "0.1.0"
+description = ""
+license = "Apache"
+authors = ["Yaal Coop <contact@yaal.coop>", "Christian Friedrich Coors <me@ccoors.de>"]
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = "^3.11"
+scim2-models = { path = "../../", develop = true }
+werkzeug = "^3.0.3"
+scim2-filter-parser = "^0.5.1"
+
+[tool.poetry.group.test.dependencies]
+pytest = "^8.2.2"
+pytest-coverage = "^0.0"
+httpx = "^0.27.0"
+time-machine = "^2.14.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.poetry]
-name = "scim2-models"
-version = "0.1.14"
-description = "SCIM2 models serialization and validation with pydantic"
-authors = ["Yaal Coop <contact@yaal.coop>"]
-license = "Apache"
-readme = "README.md"
-keywords = ["scim", "scim2", "provisioning", "pydantic"]
-documentation = "https://scim2-models.readthedocs.io"
-repository = "https://github.com/yaal-coop/scim2-models"
-classifiers = [
-    "Intended Audience :: Developers",
-    "Development Status :: 3 - Alpha",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: Implementation :: CPython",
-    "License :: OSI Approved :: MIT License",
-    "Environment :: Web Environment",
-    "Programming Language :: Python",
-    "Operating System :: OS Independent",
-]
-exclude = ["examples"]
-
-[tool.poetry.dependencies]
-python = "^3.9"
-pydantic = {version = "^2.7.0", extras = ["email"]}
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.2.1"
-pytest-coverage = "^0.0"
-
-[tool.poetry.group.doc]
-optional = true
-
-[tool.poetry.group.doc.dependencies]
-autodoc-pydantic = "^2.2.0"
-shibuya = "^2024.5.15"
-sphinx = "^7.3.7"
-sphinx-togglebutton = "^0.3.2"
-myst-parser = "^3.0.1"
+[tool.poetry.scripts]
+scim-provider = "scim_provider.cli:main"
 
 [tool.coverage.run]
 source = [
-    "scim2_models",
+    "scim_provider",
     "tests",
 ]
-omit = [".tox/*", "examples/*"]
+omit = [".tox/*", "examples/*", "scim_provider/cli.py"]
 branch = true
 
 [tool.coverage.report]
 exclude_lines = [
     "@pytest.mark.skip",
+    "@pytest.mark.xfail",
     "pragma: no cover",
     "raise NotImplementedError",
 ]
@@ -79,9 +60,8 @@ force-single-line = true
 docstring-code-format = true
 
 [tool.pytest.ini_options]
-addopts = "--doctest-modules --doctest-glob='*.rst' --ignore=examples"
+addopts = "--doctest-modules --doctest-glob='*.rst'"
 doctest_optionflags= "ALLOW_UNICODE IGNORE_EXCEPTION_DETAIL ELLIPSIS"
-
 
 [tool.tox]
 legacy_tox_ini = """
